--- a/src/app/modules/dashboard/modules/info-cards/components/add-account-modal/add-account-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/add-account-modal/add-account-modal.component.html
@@ -1,66 +1,55 @@
-<app-base-modal [titleTranslationKey]="buildTranslationKey('title')" [footerTemplate]="footer">
-  <form class="flex flex-col" [formGroup]="form">
-    <mat-form-field>
-      <mat-label>{{ buildTranslationKey('accountNameTitle') | translate }}</mat-label>
-      <input matInput [formControlName]="formFields.AccountName" />
+<app-base-modal [titleTranslationKey]="'dashboard.addAccountModal.title'" [footerTemplate]="footer">
+  <form class="flex flex-col gap-y-2" [formGroup]="form">
+    <custom-input
+      [label]="'dashboard.addAccountModal.accountNameTitle' | translate"
+      [formControlName]="formFields.AccountName"
+      [required]="true"
+      [maxLength]="20"
+      [displayCharCounter]="true"
+    ></custom-input>
 
-      @if (hasAccountNameRequiredError) {
-        <mat-error>{{ 'formErrors.required' | translate }}</mat-error>
-      }
-
-      @if (hasMaxLengthError) {
-        <mat-error>{{ buildTranslationKey('accountNameLengthError') | translate }}</mat-error>
-      }
-
-      @if (hasAccountExistsError) {
-        <mat-error>{{ buildTranslationKey('accountExistsError') | translate }}</mat-error>
-      }
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>{{ buildTranslationKey('accountValueTitle') | translate }}</mat-label>
-      <input #valueInput matInput [formControlName]="formFields.AccountValue" />
-
-      @if (hasRequiredError) {
-        <mat-error>{{ 'formErrors.required' | translate }}</mat-error>
-      }
-
-      @if (hasMinValueError) {
-        <mat-error>{{ 'formErrors.minValue' | translate: { minValue: 1 } }}</mat-error>
-      }
-
-      @if (hasNumberPatternError) {
-        <mat-error>{{ 'formErrors.numberPattern' | translate }}</mat-error>
-      }
-    </mat-form-field>
+    <custom-input
+      [formControlName]="formFields.AccountValue"
+      [label]="'dashboard.addAccountModal.accountValueTitle' | translate"
+      [required]="true"
+      [minValue]="1"
+      [type]="'number'"
+    ></custom-input>
 
     <custom-select
-      [label]="buildTranslationKey('accountCurrencyTitle') | translate"
+      [label]="'dashboard.addAccountModal.accountCurrencyTitle' | translate"
       [formControlName]="formFields.AccountCurrency"
       [options]="options"
-      [idSelector]="idSelector"
-      [displayValueSelector]="displayValueSelector"
-      [iconSelector]="iconSelector"
+      [idSelector]="currencyIdSelector"
+      [displayValueSelector]="currencyDisplayValueSelector"
+      [iconSelector]="currencyIconSelector"
+      [required]="true"
     ></custom-select>
 
-    <icon-picker
-      [label]="buildTranslationKey('accountIconTitle') | translate"
+    <custom-select
+      [label]="'dashboard.addAccountModal.accountIconTitle' | translate"
       [formControlName]="formFields.AccountIcon"
-    ></icon-picker>
+      [required]="true"
+      [iconPickerMode]="true"
+    ></custom-select>
 
     <color-picker
-      [label]="buildTranslationKey('accountBgColorTitle') | translate"
+      [label]="'dashboard.addAccountModal.accountBgColorTitle' | translate"
       [formControlName]="formFields.AccountBgColor"
+      [required]="true"
     ></color-picker>
 
     <color-picker
-      [label]="buildTranslationKey('accountTextColorTitle') | translate"
+      [label]="'dashboard.addAccountModal.accountTextColorTitle' | translate"
       [formControlName]="formFields.AccountTextColor"
+      [required]="true"
     ></color-picker>
 
     <app-info-card
       class="mt-4 !py-2 !h-20"
-      [primaryText]="(form.controls[formFields.AccountValue].value || 0) + ' ' + selectedCurrencySymbol"
+      [primaryText]="
+        (form.controls[formFields.AccountValue].value || 0) + ' ' + selectedCurrencySymbol
+      "
       [secondaryText]="form.controls[formFields.AccountName].value"
       [iconName]="form.controls[formFields.AccountIcon].value"
       [hexBgColor]="form.controls[formFields.AccountBgColor].value || '#F0F2F2'"
@@ -73,7 +62,7 @@
 <ng-template #footer>
   <app-button
     [colorScheme]="'charcoal'"
-    [text]="buildTranslationKey('addAccount') | translate"
+    [text]="'dashboard.addAccountModal.addAccount' | translate"
     [buttonSizeX]="'big'"
     [disabled]="!isFormValid"
     [loading]="loading$ | async"
