--- a/src/app/modules/design-system/components/custom-select/custom-select.component.html
+++ b/src/app/modules/design-system/components/custom-select/custom-select.component.html
@@ -8,9 +8,9 @@
 
 <div
   #trigger
-  class="font-main text-base relative cursor-pointer border-2 border-solid rounded-md h-12 group-hover:border-charcoal px-3 flex justify-start items-center gap-x-1.5"
+  class="custom-select form-control relative flex justify-start items-center gap-x-1.5"
   [ngClass]="{
-    'border-red group-hover:border-red rounded-b-none': formControl.invalid && isErrorState(),
+    'form-control-error': formControl.invalid && isErrorState(),
     'border-grey': !isOpen,
     'border-charcoal': isOpen
   }"
