--- a/src/app/modules/dashboard/modules/info-cards/components/account-value-edit-modal/account-value-edit-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/account-value-edit-modal/account-value-edit-modal.component.html
@@ -8,7 +8,7 @@
     <custom-input
       [label]="'dashboard.accountValueEditModal.valueInputLabel' | translate"
       [formControlName]="formFields.Value"
-      [required]="true"
+      [isRequired]="true"
       [minValue]="0"
       [type]="'number'"
       [preventSameValue]="true"
