--- a/src/app/modules/dashboard/modules/activity-log/components/activity-log-remove-menu/activity-log-remove-menu.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/activity-log-remove-menu/activity-log-remove-menu.component.html
@@ -6,12 +6,14 @@
   [buttonSizeY]="'small'"
   [buttonSizeX]="'small'"
   [disabled]="disabled"
+  (onMenuOpen)="setMenuClosed(false)"
 ></app-button>
 
 <mat-menu #menu="matMenu" (close)="removeRecordsWithSelectedTypes(checkbox.checkboxGroup)">
   <app-checkbox-group
     #checkbox
     [checkboxGroup]="checkboxGroup$ | async"
+    [menuClosed]="menuClosed$ | async"
     (click)="$event.stopPropagation()"
   ></app-checkbox-group>
 </mat-menu>
