custom menu, only core styles for angular material

--- a/src/app/modules/design-system/components/form-controls/checkbox/checkbox.component.html
+++ b/src/app/modules/design-system/components/form-controls/checkbox/checkbox.component.html
@@ -15,6 +15,6 @@
   }
 </div>
 
-<div class="font-main text-sm text-charcoal">
+<div class="font-main text-base text-charcoal">
   <ng-content></ng-content>
 </div>
