--- a/src/app/modules/dashboard/modules/activity-log/components/activity-log-remove-menu/activity-log-remove-menu.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/activity-log-remove-menu/activity-log-remove-menu.component.html
@@ -1,19 +1,14 @@
-<app-button
-  mat-button
-  [matMenuTriggerFor]="menu"
-  [iconName]="'delete-bin'"
-  [colorScheme]="'transparent-dark'"
-  [buttonSizeY]="'small'"
-  [buttonSizeX]="'small'"
-  [disabled]="disabled"
-  (onMenuOpen)="setMenuClosed(false)"
-></app-button>
-
-<mat-menu #menu="matMenu" (close)="removeRecordsWithSelectedTypes(checkbox.checkboxGroup)">
+<app-menu
+  [icon]="'delete-bin'"
+  [useContent]="true"
+  [menuDisabled]="disabled"
+  (open)="setMenuClosed(false)"
+  (close)="removeRecordsWithSelectedTypes(checkbox.checkboxGroup)"
+>
   <app-checkbox-group
     #checkbox
     [checkboxGroup]="checkboxGroup$ | async"
     [menuClosed]="menuClosed$ | async"
     (click)="$event.stopPropagation()"
   ></app-checkbox-group>
-</mat-menu>
+</app-menu>
