--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -1,6 +1,5 @@
 <app-button
-  mat-button
-  [matMenuTriggerFor]="menu"
+  #trigger
   [iconName]="icon"
   [colorScheme]="resolveColorScheme"
   [buttonSizeY]="buttonSizeY"
@@ -9,9 +8,31 @@
   [disabled]="menuDisabled"
   [loading]="loading"
   [shouldUseCurrentColor]="shouldUseCurrentColor"
+  (click)="toggleDropdown()"
 ></app-button>
 
-<mat-menu #menu="matMenu">
+<ng-template #actionsTemplate>
+  <div class="bg-white rounded-md border-2 border-solid border-charcoal w-full p-2">
+    @if (useContent) {
+      <ng-content></ng-content>
+    } @else {
+      <div class="flex flex-col gap-y-1 h-full rounded-md">
+        @for (action of menuActions; track action) {
+          <app-button
+            [text]="action.translationKey | translate"
+            [iconName]="action.icon"
+            [buttonSizeX]="'full'"
+            [disabled]="action.disabled || (action.disabledObs | async)"
+            [align]="'start'"
+            (click)="action.action(); toggleDropdown()"
+          ></app-button>
+        }
+      </div>
+    }
+  </div>
+</ng-template>
+
+<!-- <mat-menu #menu="matMenu">
   @for (action of menuActions; track action) {
     <app-button
       [text]="action.translationKey | translate"
@@ -22,4 +43,4 @@
       (click)="action.action()"
     ></app-button>
   }
-</mat-menu>
+</mat-menu> -->
